<resources>
    <!-- Login Page -->
    <string name="app_name">Open Restaurant</string>
    <string name="continue_as_customer">Continue as Customer</string>
    <string name="sign_in_to_business">Sign In to Business</string>
    <string name="create_a_business_account">Create a Business Account</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <!-- Restaurant Dashboard -->
    <string name="welcome">Welcome</string>
    <string name="sarovar_restaurant">Sarovar Restaurant</string>
    <string name="view_orders">View Orders</string>
    <string name="edit_restaurant_menu">Edit Restaurant Menu</string>
    <string name="edit_restaurant_details">Edit Restaurant Details</string>
    <string name="logout">Logout</string>
    <!-- Confirm Order -->
    <string name="enter_confirmation_id">Enter Confirmation ID</string>
    <string name="submitConfirmationId">Submit</string>
</resources>